<resources>
    <string name="app_name">Bets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="loading">Loading …</string>
    <string name="no_data">No data</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email for registration</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid. Only a–Z 0–9 and _ must be.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password or this username is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_matches_activity">Matches</string>
    <string name="tab_matches_new">New</string>
    <string name="tab_matches_pending">Predictions</string>
    <string name="tab_matches_completed">Results</string>
    <string name="tab_results_friends">Friends</string>
    <string name="tab_results_world">World</string>
    <string name="tab_statistics_friends">Friends</string>
    <string name="tab_statistics_world">World</string>
    <string name="predictions_count_formatted">Predictions count: %1$d</string>
    <string name="friends_predictions">Friends predictions:</string>
    <string name="points_formatted">"Points: %1$d"</string>

    <string name="account_predictions_count_formatted">Predictions count: %1$s</string>
    <string name="account_friends_count_formatted">Friends: %1$d</string>
    <string name="account_points_formatted">Points: %1$s</string>
    <string name="account_tours_wins_formatted">Tournaments wins: %1$s</string>

    <string name="matches">Matches</string>
    <string name="results">Results</string>
    <string name="rules">Rules</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="user_name">Name</string>
    <string name="points">Points</string>
    <string name="bets">Bets</string>
    <string name="scores">Scores</string>
    <string name="no_internet_connections">Sorry, No internet connectivity found</string>
    <string name="percents">%</string>
    <string name="wins">Wins</string>
    <string name="rules_text">For guessing the score - 5 points.\nFor guessing the result and goal difference or when a draw - 3 points.\nFor guessed result - 2 points.</string>
    <string name="fragment_create_prediction_title">Predict the score of the match</string>
    <string name="fragment_create_prediction_predict_button">Predict</string>
    <string name="title_activity_settings">Settings</string>
    <string name="functionality_under_developing">This functionality is under developing</string>
    <string name="avatar_dialog_title">Add Photo!</string>
    <string name="avatar_dialog_from_camera">Take Photo</string>
    <string name="avatar_dialog_from_gallery">Choose from Library</string>
    <string name="avatar_dialog_cancel">Cancel</string>
    <string name="profile_user_s_avatar">User\'s avatar</string>
    <string name="profile_add_friend">Add friend</string>
    <string name="account_profile_menu_edit">Edit</string>
    <string name="account_profile_username">Name</string>
    <string name="account_profile_password">Password</string>
    <string name="account_edit_save">Save</string>
    <string name="account_edit_email">Email</string>
    <string name="success_prediction">Success predict</string>
    <string name="chart_score_formatted">Score %1$d:%2$d</string>
    <string name="chart_prediction_formatted">Prediction %1$d:%2$d</string>
    <string name="refresh">Refresh</string>
    <string name="tournaments_filter">Tournaments filter</string>
    <string name="tour_filter_save">Save</string>
    <string name="tour_filter_active">Active</string>
    <string name="tour_filter_all">All</string>
    <string name="tour_filter_select_text">Select the tournaments to display:</string>
</resources>
