<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="biz.ddroid.bets.fragments.TournamentFilterFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tour_filter_select_text"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tour_filter_active" />

        <RadioButton
            android:id="@+id/radioAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tour_filter_all" />
    </RadioGroup>

    <Button
        android:text="@string/tour_filter_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tour_filter_save_button" />
</LinearLayout>
