<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_result_with_friends"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">
            <TextView
                android:id="@+id/tour_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Tournament (Country)  stage"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:gravity="center_horizontal"
                android:textColor="@color/cardMatchTourName" />
            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="3dp">
                <TableRow
                    android:id="@+id/table_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:padding="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/points"
                        android:padding="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bets"
                        android:padding="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scores"
                        android:padding="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/results"
                        android:padding="5dp" />
                </TableRow>
            </TableLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
